@@ -38,7 +38,7 @@ foreach($allpilots as $pilot)
 	<td align="center"><?=$pilot->location; ?></td>
 	<td align="center"><?=$pilot->totalflights; ?></td>
 	<td align="center"><?=$pilot->totalhours; ?></td>
-	<td align="center"><a id="dialog" class="jqModal" href="action.php?admin=viewpilots&action=viewoptions&pilotid=<?=$pilot->pilotid;?>"><img src="lib/images/options.gif" alt="Options" /></a></td>
+	<td align="center"><a href="index.php?admin=viewpilots&action=viewoptions&pilotid=<?=$pilot->pilotid;?>"><img src="lib/images/options.gif" alt="Options" /></a></td>
 </tr>
 <?php
 }
