@@ -1,4 +1,4 @@
-<h3>Reset Pilot Password</h3>
+<h4>Reset Pilot Password</h4>
 <p>If someone has forgetten their password and it needs to be reset. </p>
 <form id="pilotoptionchangepass" action="action.php?admin=viewpilots" method="post">
 <dl>
